// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<Fragment>
  <section
    className="boxed-group"
  >
    <h2>
      my_profile.overall_notifications.title
    </h2>
    <div
      className="boxed-group-inner"
    >
      <table
        className="data zebra"
      >
        <thead>
          <tr>
            <th />
            <th
              className="text-center"
              key="channel1"
            >
              <h4>
                notification.channel.channel1
              </h4>
            </th>
            <th
              className="text-center"
              key="channel2"
            >
              <h4>
                notification.channel.channel2
              </h4>
            </th>
          </tr>
        </thead>
        <NotificationsList
          channels={
            Array [
              "channel1",
              "channel2",
            ]
          }
          checkboxId={[Function]}
          notifications={
            Array [
              Object {
                "channel": "channel1",
                "type": "type1",
              },
              Object {
                "channel": "channel1",
                "type": "type2",
              },
              Object {
                "channel": "channel2",
                "type": "type2",
              },
            ]
          }
          onAdd={[MockFunction]}
          onRemove={[MockFunction]}
          types={
            Array [
              "type1",
              "type2",
            ]
          }
        />
      </table>
    </div>
  </section>
</Fragment>
`;

exports[`should show SonarCloud options if in SC context 1`] = `
<Fragment>
  <section
    className="boxed-group"
  >
    <h2>
      my_profile.overall_notifications.title
    </h2>
    <div
      className="boxed-group-inner"
    >
      <table
        className="data zebra"
      >
        <thead>
          <tr>
            <th />
            <th
              className="text-center"
              key="channel1"
            >
              <h4>
                notification.channel.channel1
              </h4>
            </th>
            <th
              className="text-center"
              key="channel2"
            >
              <h4>
                notification.channel.channel2
              </h4>
            </th>
          </tr>
        </thead>
        <NotificationsList
          channels={
            Array [
              "channel1",
              "channel2",
            ]
          }
          checkboxId={[Function]}
          notifications={
            Array [
              Object {
                "channel": "channel1",
                "type": "type1",
              },
              Object {
                "channel": "channel1",
                "type": "type2",
              },
              Object {
                "channel": "channel2",
                "type": "type2",
              },
            ]
          }
          onAdd={[MockFunction]}
          onRemove={[MockFunction]}
          types={
            Array [
              "type1",
              "type2",
            ]
          }
        />
      </table>
    </div>
  </section>
  <Connect(SonarCloudNotifications) />
</Fragment>
`;
